# ad-kafka-interface

./: .gitignore  ADKafka_README.md  ADPluginKafka_README.md  CHANGES.md  CMakeLists.txt  Doxyfile  Jenkinsfile  Makefile  README.md
ADKafka/: ADKafka_README.md
ADKafka/ADKafkaApp/Db/: ADKafka.template
ADKafka/ADKafkaApp/src/: KafkaConsumer.cpp  KafkaConsumer.h  KafkaDriver.cpp  KafkaDriver.h  Makefile  NDArrayDeSerializer.h  NDArray_schema.fbs  ParamUtility.h
ADKafka/configure/: CONFIG_SITE
ADKafka/iocs/ADKafkaIOC/ADKafkaApp/src/: Makefile
ADKafka/iocs/ADKafkaIOC/configure/: RELEASE
ADKafka/iocs/ADKafkaIOC/iocBoot/iocADKafka/: st.cmd  start_epics  start_epics.bat
ADKafkaApp/Db/: ADKafka.req  ADKafka.template  Makefile
ADKafkaApp/src/: KafkaConsumer.cpp  KafkaConsumer.h  KafkaDriver.cpp  KafkaDriver.h  Makefile  NDArrayDeSerializer.cpp  NDArrayDeSerializer.h  NDArray_schema_generated.h
ADPluginKafka/: ADPluginKafka_README.md  Makefile
ADPluginKafka/ADPluginKafkaApp/Db/: ADPluginKafka.template
ADPluginKafka/ADPluginKafkaApp/src/: KafkaPlugin.cpp  KafkaPlugin.h  KafkaProducer.cpp  Makefile  NDArraySerializer.cpp  NDArraySerializer.h  NDArray_schema_generated.h  ParamUtility.h
ADPluginKafka/iocs/ADPluginKafkaIOC/ADPluginKafkaApp/src/: ADPluginKafkaAppMain.cpp  Makefile
ADPluginKafka/iocs/ADPluginKafkaIOC/configure/: RELEASE
ADPluginKafka/iocs/ADPluginKafkaIOC/iocBoot/iocADPluginKafka/: Makefile  st.cmd  start_epics
ADPluginKafkaApp/opi/: adKafkaPlugin.opi
ADPluginKafkaApp/src/: KafkaPlugin.cpp  KafkaPlugin.h  KafkaProducer.cpp  KafkaProducer.h  Makefile  NDArraySerializer.cpp  NDArraySerializer.h  NDArray_schema_generated.h
configure/: CONFIG_SITE  RELEASE.linux-x86_64.Common  RELEASE.local  RULES
iocs/: Makefile
iocs/ADKafkaIOC/ADKafkaApp/src/: Makefile
iocs/ADKafkaIOC/configure/: RELEASE.linux-x86_64.Common  RELEASE.local
iocs/ADKafkaIOC/iocBoot/iocADKafka/: Makefile  st.cmd  start_epics
iocs/ADPluginKafkaIOC/ADPluginKafkaApp/src/: Makefile
iocs/ADPluginKafkaIOC/configure/: RELEASE  RELEASE.local
iocs/ADPluginKafkaIOC/iocBoot/iocADPluginKafka/: Makefile  st.cmd  start_epics
m-epics-ADKafka/: ADKafka_README.md  EEEmakefile  Makefile
m-epics-ADKafka/ADKafkaApp/Db/: ADKafka.template  KafkaPlugin.template
m-epics-ADKafka/ADKafkaApp/opi/: adKafka.opi
m-epics-ADKafka/ADKafkaApp/src/: ADKafka.dbd  KafkaConsumer.cpp  KafkaConsumer.h  KafkaDriver.cpp  KafkaDriver.h  KafkaPlugin.h  Makefile  NDArrayDeSerializer.cpp  NDArrayDeSerializer.h  NDArray_schema.fbs  NDArray_schema_generated.h  ParamUtility.h  jsoncpp.cpp
m-epics-ADKafka/ADPKafkaApp/src/: KafkaConsumer.h  KafkaPlugin.dbd  ParamUtility.cpp
m-epics-ADKafka/configure/: RELEASE  RELEASE.local
m-epics-ADKafka/iocs/: Makefile
m-epics-ADKafka/startup/: ADKafka_demo.cmd
m-epics-ADPluginKafka/: ADPluginKafka_README.md  EEEmakefile  README.md
m-epics-ADPluginKafka/ADPluginKafkaApp/Db/: ADPluginKafka.template  KafkaPlugin.template  Makefile
m-epics-ADPluginKafka/ADPluginKafkaApp/src/: KafkaPlugin.cpp  KafkaPlugin.h  KafkaProducer.cpp  KafkaProducer.h  Makefile  NDArraySerializer.cpp  NDArraySerializer.h  NDArray_schema.fbs  NDArray_schema_generated.h  ParamUtility.cpp  ParamUtility.h  json.h
m-epics-ADPluginKafka/configure/: RELEASE.local
m-epics-ADPluginKafka/iocs/: Makefile
m-epics-ADPluginKafka/iocs/ADPluginKafkaIOC/ADPluginKafkaApp/src/: Makefile
m-epics-ADPluginKafka/iocs/ADPluginKafkaIOC/configure/: CONFIG
m-epics-ADPluginKafka/iocs/ADPluginKafkaIOC/iocBoot/iocADPluginKafka/: start_epics.bat
m-epics-ADPluginKafka/startup/: ADPluginKafka_demo.cmd  KafkaProducerDemo.cmd
startup/: ADKafka_demo.cmd  ADPluginKafka_demo.cmd
unit_tests/: CMakeLists.txt  GenerateNDArray.cpp  GenerateNDArray.h  KafkaConsumerTest.cpp  KafkaDriverTest.cpp  KafkaPluginTest.cpp  KafkaProducerTest.cpp  NDArraySerializerTest.cpp  ParamUtilityTest.cpp  PortName.cpp  PortName.h  RunTests.cpp  someNDArray.data
